--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<html>
+<body>
+<h1>About this repository</h1>
+<p>This repository contains software mentioned in our talk at XML London 2016.</p>
+</body>
+</html>
