--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<h1>About this repository</h1>
-<p>This repository contains software mentioned in our talk at XML London 2016.</p>
+<h1>About:</h1>
+<p>This repository contains software discussed in Achim Berndzen / Gerrit Imsieke: <i>Interoperability of XProc pipelines
+A real world publishing scenario</i>, <a href="http://xmllondon.com/2016/xmllondon-2016-proceedings.pdf" target="blank">XML London 2016. 
+Conference proceedings</a>, pp.&nbsp;82--98.</p>
 </body>
 </html>
