--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 <p>This repository contains software discussed in Achim Berndzen / Gerrit Imsieke: <i>Interoperability of XProc pipelines
 A real world publishing scenario</i>, <a href="http://xmllondon.com/2016/xmllondon-2016-proceedings.pdf" target="blank">XML London 2016. 
 Conference proceedings</a>, pp.&nbsp;82--98.</p>
+
+<h1>Caution:</h1>
+<p>The software is for documentation purposes only and should not used as it is for production.</p>
 </body>
 </html>
