--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
 <h1>About:</h1>
-<p>This repository contains software discussed in <br />
-Achim Berndzen / Gerrit Imsieke:<br/>
-<i>Interoperability of XProc pipelines. A real world publishing scenario</i>,<br />
-<a href="http://xmllondon.com/2016/xmllondon-2016-proceedings.pdf" target="blank">XML London 2016. 
+<p>This repository contains software discussed in</p>
+<p>Achim Berndzen / Gerrit Imsieke:</p>
+<p><i>Interoperability of XProc pipelines. A real world publishing scenario</i>,</p>
+<p><a href="http://xmllondon.com/2016/xmllondon-2016-proceedings.pdf" target="blank">XML London 2016. 
 Conference proceedings</a>, pp.&nbsp;82--98.</p>
 
 <h1>Caution:</h1>
